tests/files/type_checker_tests/should_pass/083.cmdr
//Test set operation type checks
a = 1;
x = (2.0, true, 1);
x[a] = [1, 2, 3];
