tests/files/type_checker_tests/should_fail/084.cmdr
//Should fail if array contains multiple types
x = [1, 3];
x.append(2.3);
